# Infrastructure

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
clients/: __init__.py  binance.py  binance_futures.py
config/: __init__.py
dashboard/: RASPBERRY_PI_SETUP.md  app.py  cloudflared-config.yml  nats_bridge.py  store.py
dashboard/api/: market.py  orders.py  performance.py  positions.py  push.py  strategies.py  topology.py
dashboard/frontend/: app.js  index.html  package.json  styles.css  vite.config.js
dashboard/frontend/src/: App.css  App.jsx  index.css  theme.jsx
dashboard/frontend/src/subpage/: Network.jsx  Orders.jsx  Performance.jsx  StrategyPerformance.jsx
dashboard/ws/: manager.py
data/: types.py
data/connectors/: binance.py  binance_futures.py  types.py
data/normalizers/: bars.py  binance.py  binance_futures.py
docs/: install.md
engine/: types.py
engine/data/: codec.py  nats_bus.py
engine/order/: consolidator.py
engine/strategy/: guard.py  pnl_calc.py  runner.py
execution/: types.py
execution/brokers/: bybit.py  lighter.py  paper.py
interfaces/: __init__.py  broker.py  client.py  signals.py  strategy.py
strategies/: __init__.py  example.py  funding_arb.py  momentum.py
utils/: pckgs.py
workers/: __init__.py  consolidator_worker.py  dashboard.py  datafeed_server.py  strategy_worker.py
